[package]
name = "croner-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the croner cron expression parser"
repository = "https://github.com/openworkers/croner-wasm"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
croner = "3.0.1"
chrono = { version = "0.4", features = ["wasmbind"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "s"  # Optimize for size
lto = true       # Enable link-time optimization
